<resources>
    <string name="app_name">Medicine Supply</string>
    <string name="email_hint">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_see_password">See password</string>
    <string name="button_login">Login</string>
    <string name="button_create_account">Create account</string>
    <string name="button_forgot_password">I forgot my password</string>
    <string name="hint_name">Name</string>
    <string name="hint_telephone">Telephone</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="button_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_telephone">Invalid telephone!</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="account_created">Account created!</string>
    <string name="fill_all_boxes">You have to fill all the boxes!</string>
    <string name="no_user_found">No user found</string>
    <string name="add_to_order">Add to order</string>
    <string name="add_new_medicine">Add new medicine</string>
    <string name="see_user_details">See user details</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="pills">pills x</string>
    <string name="concentration">mg</string>
    <string name="price">lei</string>
    <string name="hint_manufacturer">Manufacturer</string>
    <string name="hint_no_pills">Number of pills</string>
    <string name="hint_concentration">Concentration</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_mew_medicine">Add mew medicine</string>
    <string name="medicine_added">Medicine added!</string>
    <string name="add_medicine_to_order">added!</string>
    <string name="click_on_item_to_delete">(*Click on item to delete!)</string>
    <string name="your_products">Your products</string>
    <string name="place_order">Place order</string>
    <string name="deleted">deleted!</string>
    <string name="click_on_item_to_add">(*Click on item to add)</string>
    <string name="order_placed">Order placed!</string>
    <string name="order_history">Order History</string>
    <string name="orders">Orders</string>
    <string name="existing_email">User with the same email already exists</string>
    <string name="user">\"User: \"</string>
    <string name="empty_order">You have to order something!</string>
</resources>
