<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.OrderFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txtProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/antic_didone"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/your_products"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtProducts"
        android:background="@color/colorAccent"
        app:layout_constraintHeight_percent="0.60"/>

    <TextView
        android:id="@+id/txtHint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.03"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/orderRecyclerView"
        android:fontFamily="@font/antic_didone"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/click_on_item_to_delete"/>

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintHeight_percent="0.075"
        android:background="@color/colorAccent"
        android:fontFamily="@font/antic_didone"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/place_order"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.075"
        android:background="@color/colorAccent"
        android:fontFamily="@font/antic_didone"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/button_cancel"
        android:textAllCaps="true"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>