<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.LoginFragment"
    android:background="@color/colorPrimary">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layoutPassword"
        app:layout_constraintWidth_percent="0.75"
        android:autofillHints="@string/email_hint"
        android:hint="@string/email_hint"
        app:boxStrokeColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/antic_didone"
        android:textStyle="bold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/antic_didone"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/checkSeePassword"
        app:layout_constraintWidth_percent="0.75"
        android:autofillHints="@string/hint_password"
        android:hint="@string/hint_password"
        app:boxStrokeColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/antic_didone"
        android:textStyle="bold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/antic_didone"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkSeePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/antic_didone"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/button_see_password"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toBottomOf="@id/checkSeePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAddAccount"
        android:background="@color/colorAccent"
        android:fontFamily="@font/antic_didone"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/button_login"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnAddAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnForgotPassword"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/antic_didone"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/button_create_account"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnAddAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/antic_didone"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/button_forgot_password"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</androidx.constraintlayout.widget.ConstraintLayout>