<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.NewMedicineFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_mew_medicine"
        android:fontFamily="@font/antic_didone"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintWidth_percent="0.75"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_name"
        android:hint="@string/hint_name"
        app:boxStrokeColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/antic_didone"
        android:textStyle="bold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/antic_didone"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutManufacturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutName"
        app:layout_constraintWidth_percent="0.75"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_manufacturer"
        android:hint="@string/hint_manufacturer"
        app:boxStrokeColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/antic_didone"
        android:textStyle="bold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtManufacturer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/antic_didone"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPills"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutManufacturer"
        app:layout_constraintWidth_percent="0.75"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_no_pills"
        android:hint="@string/hint_no_pills"
        app:boxStrokeColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/antic_didone"
        android:textStyle="bold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPills"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/antic_didone"
            android:textSize="22sp"
            android:textStyle="bold"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutConcentration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPills"
        app:layout_constraintWidth_percent="0.75"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_concentration"
        android:hint="@string/hint_concentration"
        app:boxStrokeColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/antic_didone"
        android:textStyle="bold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConcentration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/antic_didone"
            android:textSize="22sp"
            android:textStyle="bold"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutConcentration"
        app:layout_constraintWidth_percent="0.75"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_price"
        android:hint="@string/hint_price"
        app:boxStrokeColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/antic_didone"
        android:textStyle="bold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/antic_didone"
            android:textSize="22sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPrice"
        app:layout_constraintWidth_percent="0.75"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_quantity"
        android:hint="@string/hint_quantity"
        app:boxStrokeColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:fontFamily="@font/antic_didone"
        android:textStyle="bold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtQuantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/antic_didone"
            android:textSize="22sp"
            android:textStyle="bold"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddMedicine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toBottomOf="@id/layoutQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        android:background="@color/colorAccent"
        android:fontFamily="@font/antic_didone"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/add_medicine"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toBottomOf="@id/btnAddMedicine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorAccent"
        android:fontFamily="@font/antic_didone"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/button_cancel"
        android:textAllCaps="true"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>