<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.InventoryFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.03"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/antic_didone"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medicineRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        android:background="@color/colorAccent"
        app:layout_constraintHeight_percent="0.55"/>

    <TextView
        android:id="@+id/txtHint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.03"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/medicineRecyclerView"
        android:fontFamily="@font/antic_didone"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/click_on_item_to_add"/>

    <Button
        android:id="@+id/btnAddMedicine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.075"
        android:background="@color/colorAccent"
        android:fontFamily="@font/antic_didone"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/add_new_medicine"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnAddMedicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.075"
        android:background="@color/colorAccent"
        android:fontFamily="@font/antic_didone"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/place_order"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnSeeDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnPlaceOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.075"
        android:background="@color/colorAccent"
        android:fontFamily="@font/antic_didone"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/see_user_details"
        android:textAllCaps="true"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>